[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bitcoincash-addr = "0.5.2"
clap = "4.5.54"
env_logger = "0.11.8"
failure = "0.1.8"
log = "0.4.29"
merkle-cbt = "0.3.2"
postcard = {version = "1.1.3", features = ["alloc"]}
rand = "0.9.2"
rust-crypto = "0.2.36"
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"
simple_logger = "5.1.0"
sled = "0.34.7"

[lib]
path = "src/block.rs"
